compiler/tools/fpp-check/test/component_array_undef_constant.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/component_array_undef_constant.fpp: 2.29
  array A = [3] U32 default a
                            ^
error: undefined symbol a
